# Entanglement

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  benchmark.ps1  main.cpp  run_benchmarks.sh  run_soak.ps1  vm_server.py
apps/: churn_test_main.cpp  client_main.cpp  net_bench.cpp  server_main.cpp  stress_test_main.cpp  test_main.cpp
include/: entanglement.h
src/: channel_manager.cpp  channel_manager.h  client.cpp  client.h  congestion_control.cpp  congestion_control.h  constants.h  endpoint_key.cpp  endpoint_key.h  entanglement_c.cpp  fragmentation.cpp  fragmentation.h  mpsc_queue.h  packet_header.h  platform.cpp  platform.h  send_pool.h  server.cpp  server.h  server_worker.cpp  server_worker.h  spsc_queue.h  udp_connection.cpp  udp_connection.h  udp_socket.cpp  udp_socket.h  xdp_tx.cpp  xdp_tx.h
